--- a/content/課程.html
+++ b/content/課程.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='W15.html'>W15</a><li><a href='cEX.html'>cEX</a><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程.html'>課程</a><li><a href='.html'></a><li><a href='練習.html'>練習</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='W15.html'>W15</a><li><a href='cEX.html'>cEX</a><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程.html'>課程</a><li><a href='練習.html'>練習</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">ANSIC << <a href='ANSIC.html'>Previous</a> <a href='.html'>Next</a> >> <br /><h1>課程</h1>
+    <div id="tipue_search_content">ANSIC << <a href='ANSIC.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習<br /><h1>課程</h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;string.h&gt;
 
@@ -228,7 +228,329 @@ int main(void)
 }
 </pre>
 <p><img alt="" height="177" src="./../images/螢幕擷取畫面 2023-12-26 163652.png" width="594"/></p>
-<br />ANSIC << <a href='ANSIC.html'>Previous</a> <a href='.html'>Next</a> >> </div>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdlib.h&gt;
+#include &lt;stdio.h&gt;
+#include &lt;time.h&gt;
+
+int main(void)
+{
+    // 设置时区为“Asia/Calcutta”
+    setenv("TZ", "/usr/share/zoneinfo/Asia/Calcutta", 1);   
+
+    // 获取并打印当前日期和时间
+    struct tm tm = *localtime(&amp;(time_t){time(NULL)});
+    printf("\n今天是 :            %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n", tm.tm_isdst ? "生效中" : "未生效");
+
+    // 将月份减去 24，表示 24 个月前的日期和时间
+    tm.tm_mon -= 24;  
+
+    // 重新计算时间
+    mktime(&amp;tm);       
+
+    // 获取并打印 24 个月前的日期和时间
+    printf("\n24个月前的日期是 : %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n\n", tm.tm_isdst ? "生效中" : "未生效");
+
+    return 0;
+}
+</pre>
+<p><img alt="" height="237" src="./../images/螢幕擷取畫面 2023-12-26 181409.png" width="502"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/3.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdlib.h&gt;
+#include &lt;stdio.h&gt;
+#include &lt;time.h&gt;
+
+int main(void)
+{
+    // 设置时区为“Asia/Calcutta”
+    setenv("TZ", "/usr/share/zoneinfo/Asia/Calcutta", 1);   
+
+    // 获取并打印当前日期和时间
+    struct tm tm = *localtime(&amp;(time_t){time(NULL)});
+    printf("\n今天是 :            %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n", tm.tm_isdst ? "生效中" : "未生效");
+
+    // 将月份减去 24，表示 24 个月前的日期和时间
+    tm.tm_mon -= 24;  
+
+    // 重新计算时间
+    mktime(&amp;tm);       
+
+    // 获取并打印 24 个月前的日期和时间
+    printf("\n24个月前的日期是 : %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n\n", tm.tm_isdst ? "生效中" : "未生效");
+
+    return 0;
+}
+</pre>
+<p><img alt="" height="237" src="./../images/螢幕擷取畫面 2023-12-26 181409.png" width="502"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/4.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;limits.h&gt;
+
+double powxn(double x, int n) {
+    double k;
+    if (n == 0) return 1;
+    k = powxn(x * x, n / 2);
+    if (n % 2) k = k * x;
+    return k;
+}
+
+int main(void)
+{
+    double x = 7.0;
+    int n = 2;
+    printf("\nx = %f, y = %d  ", x, n);
+    printf("\nResult:(x^n) : %f ",powxn(x, n));
+    x = 6.2;
+    n = 3;
+    printf("\n\nx = %f, y = %d  ", x, n);
+    printf("\nResult:(x^n) : %f ",powxn(x, n));
+    return 0;
+}</pre>
+<p><img alt="" height="202" src="./../images/螢幕擷取畫面 2023-12-26 190043.png" width="498"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/5.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">//Source: https://bit.ly/2KNsta8
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+#include &lt;string.h&gt;
+#include &lt;stdbool.h&gt;
+
+char* fractionToDecimal(int numerator, int denominator) {
+    char *p;
+    int psz, n, *dec, dsz, x;
+    long long num, den, k, f;
+    int i, repeat_at;
+    int neg = 0;
+
+    psz = dsz = 100; n = x = 0;
+    p = malloc(psz * sizeof(char));
+
+    neg = ((numerator &gt; 0 &amp;&amp; denominator &lt; 0) ||
+           (numerator &lt; 0 &amp;&amp; denominator &gt; 0)) ? 1 : 0;
+    num = numerator;
+    den = denominator;
+    num = (num &lt; 0) ? -num : num;
+    den = (den &lt; 0) ? -den : den;
+
+    k = num / den;
+    f = num % den;
+
+    if (neg &amp;&amp; (k || f)) p[n ++] = '-';
+
+    n += sprintf(&amp;p[n], "%lld", k);
+    if (!f) {
+        p[n] = 0;
+        return p;
+    }
+
+    p[n ++] = '.';
+
+    dec = malloc(dsz * sizeof(int));
+
+    repeat_at = -1;
+    if (f &lt; 0) f = -f;
+    while (f) {
+        for (i = 0; i &lt; x; i += 2) {
+            if (dec[i] == f) {
+                repeat_at = i;
+                goto done;
+            }
+        }
+        if (x + 1 &gt;= dsz) {
+            dsz *= 2;
+            dec = realloc(dec, dsz * sizeof(int));
+        }
+        dec[x ++] = f;
+        f *= 10;
+        k = f / den;
+        dec[x ++] = k;
+        f = f % den;
+    }
+
+done:
+    for (i = 0; i &lt; x; i += 2) {
+        if (n + 3 &gt; psz) {
+            psz *= 2;
+            p = realloc(p, psz * sizeof(char));
+        }
+        if (repeat_at == i) {
+            p[n ++] = '(';
+        }
+        p[n ++] = '0' + dec[i + 1];
+    }
+    if (repeat_at != -1) p[n ++] = ')';
+    p[n ++] = 0;
+
+    free(dec);
+
+    return p;
+}
+
+int main(void)
+{
+    int n = 3;
+    int d = 2;
+    printf("\nn = %d, d = %d  ", n, d);
+    printf("\nFractional part: %s ", fractionToDecimal(n, d));
+
+    n = 4;
+    d = 7;
+    printf("\n\nn = %d, d = %d  ", n, d);
+    printf("\nFractional part: %s ", fractionToDecimal(n, d));
+
+    return 0;
+}
+</pre>
+<p></p>
+<p><img alt="" height="183" src="./../images/螢幕擷取畫面 2023-12-26 193013.png" width="544"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/6.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    int fno, sno, *ptr, *qtr, sum;  // 宣告整數變數 fno, sno, sum，以及整數指標 ptr, qtr
+
+    printf("\n\n Pointer : Add two numbers :\n");
+    printf("--------------------------------\n");
+
+    printf(" Input the first number : ");
+    // 檢查 scanf 的返回值，確保成功讀取一個整數
+    if (scanf("%d", &amp;fno) != 1) {
+        fprintf(stderr, "Error: Invalid input for the first number.\n");
+        return 1;
+    }
+
+    printf(" Input the second number : ");
+    // 檢查 scanf 的返回值，確保成功讀取一個整數
+    if (scanf("%d", &amp;sno) != 1) {
+        fprintf(stderr, "Error: Invalid input for the second number.\n");
+        return 1;
+    }
+
+    ptr = &amp;fno;  // 將 fno 的地址賦值給指標 ptr
+    qtr = &amp;sno;  // 將 sno 的地址賦值給指標 qtr
+
+    sum = *ptr + *qtr;  // 解參考 ptr 和 qtr，取得值並計算它們的和
+
+    printf(" The sum of the entered numbers is : %d\n\n", sum);  // 輸出輸入數字的總和
+
+    return 0;
+}
+</pre>
+<p><img alt="" height="240" src="./../images/螢幕擷取畫面 2023-12-26 200258.png" width="447"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/7.mp4" type="video/mp4"/></video></p>
+<p></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    int arr[10];  // 宣告一個大小為10的整數數組，用於存儲使用者輸入的整數
+    int i;
+
+    // 提示用戶輸入十個整數
+    printf("\n\nRead and Print elements of an array:\n");
+    printf("-----------------------------------------\n");
+    printf("Input 10 elements in the array :\n");
+
+    // 使用迴圈接受用戶輸入，並將整數存入數組
+    for (i = 0; i &lt; 10; i++) {
+        printf("element - %d : ", i);
+
+        // 檢查 scanf 的返回值，確保成功讀取一個整數
+        if (scanf("%d", &amp;arr[i]) != 1) {
+            fprintf(stderr, "Error: Invalid input for element %d.\n", i);
+            return 1;  // 如果輸入無效，返回錯誤碼
+        }
+    }
+
+    // 顯示數組中的所有元素
+    printf("\nElements in array are: ");
+    for (i = 0; i &lt; 10; i++) {
+        printf("%d  ", arr[i]);
+    }
+
+    printf("\n");
+    return 0;
+}
+</pre>
+<p><img alt="" height="251" src="./../images/螢幕擷取畫面 2023-12-26 201835.png" width="400"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/8.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    int days, years, weeks;
+
+    days = 1329; // 總天數
+
+    // 將天數轉換為年、週和天
+    years = days / 365;  // 計算年數
+    weeks = (days % 365) / 7;  // 計算週數
+    days = days % 7;  // 計算剩餘的天數
+
+    // 輸出結果
+    printf("Years: %d\n", years);
+    printf("Weeks: %d\n", weeks);
+    printf("Days: %d\n", days);
+
+    return 0;
+}
+</pre>
+<p><img alt="" height="129" src="./../images/螢幕擷取畫面 2023-12-26 203045.png" width="400"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/9.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    double wi1, ci1, wi2, ci2, result; // 宣告變數，用於存儲物品的重量和數量
+
+    // 提示用戶輸入物品1的重量
+    printf("Weight - Item1: ");
+    if (scanf("%lf", &amp;wi1) != 1) {
+        fprintf(stderr, "Error: Invalid input for weight of item1.\n");
+        return 1;
+    }
+
+    // 提示用戶輸入物品1的數量
+    printf("No. of item1: ");
+    if (scanf("%lf", &amp;ci1) != 1) {
+        fprintf(stderr, "Error: Invalid input for count of item1.\n");
+        return 1;
+    }
+
+    // 提示用戶輸入物品2的重量
+    printf("Weight - Item2: ");
+    if (scanf("%lf", &amp;wi2) != 1) {
+        fprintf(stderr, "Error: Invalid input for weight of item2.\n");
+        return 1;
+    }
+
+    // 提示用戶輸入物品2的數量
+    printf("No. of item2: ");
+    if (scanf("%lf", &amp;ci2) != 1) {
+        fprintf(stderr, "Error: Invalid input for count of item2.\n");
+        return 1;
+    }
+
+    // 計算平均值
+    result = ((wi1 * ci1) + (wi2 * ci2)) / (ci1 + ci2);
+
+    // 輸出平均值
+    printf("Average Value = %f\n", result);
+
+    return 0;
+}
+</pre>
+<p><img alt="" height="180" src="./../images/螢幕擷取畫面 2023-12-26 204129.png" width="399"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/10.mp4" type="video/mp4"/></video></p>
+<p></p>
+<p></p><br />ANSIC << <a href='ANSIC.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習</div>
         
     <!-- footer -->
       <div class="container">
